# lagrange

./: .check-justfile  .gitattributes  .gitignore  Cargo.toml  PLAN.md  README.md  build.rs  justfile
.github/workflows/: checks.yml  docs.yml  publish.yml  release.yml
assets/: lagrange-comments.css  lagrange-comments.js
crates/lagrange-adapter/: Cargo.toml
crates/lagrange-adapter/src/: lib.rs
crates/lagrange-adapter/src/storage/: memory.rs  sqlite.rs
crates/lagrange-edge/: Cargo.toml
crates/lagrange-exchange/src/writer/: markdown.rs
crates/lagrange-migrate/: Cargo.toml
crates/lagrange-protocol/src/: api.rs
crates/lagrange-server/: Cargo.toml
crates/lagrange-server/src/: auth.rs  main.rs  store.rs
crates/lagrange-server/tests/: http_flow.rs
create-lagrange/: README.md  index.js  install.js  package.json
create-lagrange/.github/workflows/: publish-npm.yml
docs/: lagrange.toml
docs/ar/: README.md  SUMMARY.md
docs/ar/guides/: architecture.md  quickstart.md
docs/en/: README.md  SUMMARY.md  index.md
docs/en/guides/: architecture.md  quickstart.md
docs/es/: README.md  SUMMARY.md
docs/es/guides/: architecture.md  quickstart.md
docs/fr/: README.md  SUMMARY.md
docs/fr/guides/: architecture.md  quickstart.md
docs/ja/: README.md  SUMMARY.md
docs/ja/guides/: architecture.md  quickstart.md
docs/ko/: README.md  SUMMARY.md
docs/ko/guides/: architecture.md  quickstart.md
docs/ru/: README.md  SUMMARY.md
docs/ru/guides/: architecture.md  quickstart.md
docs/zhs/: README.md  SUMMARY.md
docs/zhs/guides/: architecture.md  quickstart.md
docs/zht/: README.md  SUMMARY.md
docs/zht/guides/: architecture.md  quickstart.md
src/: cli.rs  config.rs  diagram.js  diagram.rs  frontmatter.rs  icons.rs  lib.rs  live.rs  main.rs  render.rs  scaffold.rs  search.rs  site.rs  theme.rs
src/comments/: clipboard.js  mod.rs  modal.js  runtime.css  runtime.js  scrollbar.js  ui.js
src/markdown/: ast.rs  grammar.pest  mod.rs  parser.rs
styles/: layout.scss
