[package]
name = "lagrange-library"
version = "0.2.2"
edition = "2021"
rust-version = "1.80"
authors = ["langyo <langyo.china@gmail.com>"]
publish = true
description = "A WASI-rendered Markdown static site facility — multilingual out of the box"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/celestia-island/lagrange"
keywords = ["documentation", "markdown", "ssg", "wasi", "static-site"]
categories = ["command-line-utilities", "text-processing", "web-programming"]
exclude = ["docs/", "justfile", ".github/"]

[package.metadata.docs.rs]
all-features = true

# cargo-binstall: fetch the prebuilt binary from GitHub Releases instead of
# compiling from source. The URL pattern matches the archives produced by
# .github/workflows/release.yml.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/lagrange-v{ version }-{ target }.tar.{ archive-format }"
bin-dir = "lagrange{ binary-ext }"
pkg-fmt = "tgz"

[lib]
name = "lagrange_library"
path = "src/lib.rs"

[[bin]]
name = "lagrange"
path = "src/main.rs"

[dependencies]
anyhow = "^1"
clap = { version = "^4", features = ["derive"] }
pest = "^2"
pest_derive = "^2"
# Build-time syntax highlighting for code blocks (syntect = pure Rust, no tree-sitter).
syntect = { version = "^5", default-features = false, features = ["default-fancy"] }
# Unified logging (matching the tairitsu/shirebe/kou ecosystem convention).
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
chrono = "^0.4"
# JSON for the embedded multi-language page data.
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
toml = "^0.8"
# Frontmatter parsing (YAML `---` blocks). TOML frontmatter reuses `toml`.
serde_yaml = "^0.9"

# Dev server: axum + tower-http ServeDir for static file serving.
axum = "^0.8"
tokio = { version = "^1", features = ["net", "rt-multi-thread", "macros"] }
tower-http = { version = "^0.6", features = ["fs"] }

# Rendering IR: tairitsu virtual DOM (lightweight, server-side render-to-HTML).
# NOTE: floors require tairitsu 0.5.18 — the first release whose scss! macro
# honours `no_hash`; older macros silently hashed (and corrupted) the global
# layout stylesheet, stripping pages of nearly all styling.
tairitsu-vdom = "^0.5.18"
# tairitsu hooks runtime (needed by hikari components).
tairitsu-hooks = "^0.5.18"
# tairitsu macros (rsx!, component!, define_props — needed by hikari components).
tairitsu-macros = "^0.5.18"
# Theming: hikari color palette + icon system.
hikari-palette = "^0.3"
hikari-icons = { version = "^0.3", default-features = false }
# Hikari UI components (Card, CodeHighlight, Typography, etc.) — rendered via
# tairitsu-vdom SSR at build time, same VNode→HTML path lagrange already uses.
# Uses local path for dev; crates.io consumers get the published version.
# Floor 0.3.13: first hikari release rebuilt against the fixed scss! macro.
hikari-components = "^0.3.13"
# Hikari i18n — component UI string translations (copy/cancel/etc.)
hikari-i18n = "^0.3"

[dev-dependencies]
tempfile = "^3"

# ── workspace ──────────────────────────────────────────────────────────────
# The root package (this crate, `lagrange-library`) is a workspace member by
# default. Sibling crates under `crates/` implement the comment backend and
# migration facilities; they depend on `lagrange-protocol` for the wire format
# and are published independently.
[workspace]
members = [
    "packages/protocol",
    "packages/adapter",
    "packages/exchange",
    "packages/migrate",
    "packages/server",
    "packages/edge",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.80"
authors = ["langyo <langyo.china@gmail.com>"]
license = "SySL-1.0"
repository = "https://github.com/celestia-island/lagrange"
