[package]
name = "lagrange-adapter"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Storage / auth / moderation SPI for lagrange comment backends"
keywords = ["comments", "storage", "sqlite", "lagrange", "adapter"]
categories = ["web-programming", "database"]

[dependencies]
lagrange-protocol = { path = "../lagrange-protocol", version = "^0.1" }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
# Markdown → sanitised HTML for comment bodies. Enable the `html` feature
# explicitly (it's default-on upstream, but we opt out of defaults to stay lean).
pulldown-cmark = { version = "^0.12", default-features = false, features = ["html"] }
# Ids.
ulid = { version = "^1", features = ["std"] }
# Logging.
tracing = "^0.1"
chrono = { version = "^0.4", default-features = false, features = ["clock", "serde"] }

# Optional storage backends. Each is feature-gated so a backend binary pulls
# only what it needs (e.g. a CF Worker build never compiles rusqlite).
# `bundled` compiles sqlite3 from source so the binary has zero external deps
# (critical for cross-platform self-hosted deploys and CI without a system
# sqlite3 dev package).
rusqlite = { version = "^0.32", optional = true, features = ["bundled"] }

[dev-dependencies]
tempfile = "^3"

[features]
default = ["memory", "sqlite"]
# In-process store — always available; used by tests and tiny self-hosted
# deploys. Kept as a feature only so downstream crates can opt out for a
# strictly-minimal dependency set.
memory = []
# SQLite via rusqlite (self-hosted default).
sqlite = ["dep:rusqlite"]
